--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
-	<div id="component-ccg001" class="cf height-maximum">
+	<div id="component-ccg001" class="cf height-maximum" style="visibility: hidden;">
 		<div class="pull-left ccg001-content">
 			<div id="ccg001-header" class="ccg001-table">
 				<div class="ccg001-cell">
@@ -121,8 +121,8 @@
 			</com:ko>
 			<com:ko tag="if" bind="isAdvancedSearchTab">
 				<div tabindex="-1" class="tab-content-2 height-maximum">
-						<div class="height-maximum">
-							<div class="pull-left height-maximum" style="padding-right: 15px; overflow: scroll;">
+						<div id="ccg001-tab-content-2" class="height-maximum">
+							<div class="pull-left height-maximum" style="padding-right: 15px; overflow: overlay;">
 								<div>
 									<label>#{i18n.getText('CCG001_24')}</label>
 								</div>
