--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -86,6 +86,7 @@
 
 #workplaceList {
 	float: left;
+	width: 420px;
 }
 
 #btnDetailWorkplace {
@@ -164,7 +165,6 @@
 #component-ccg001 {
 	z-index: 999;
 	position: fixed;
-	display: none;
 	overflow: hidden;
 }
 
