[CCG001] fix button Apply

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -74,7 +74,7 @@
 				</div>
 				<div class="ccg001-cell bot">
 					<button tabindex="5" id="ccg001-btn-apply-search-condition"
-						class="proceed caret-bottom" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
+						class="proceed caret-bottom dis-btn" data-bind="enable: showApplyBtn, click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
 				</div>
 			</div>
 		<div tabindex="6" id="tab-panel" class="cf ccg-tabpanel pull-left"
