[CCG001] fix css

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -34,7 +34,7 @@
 					<div id="ccgcomponent"></div>
 					<h1>CCG001 社員範囲選択 （共通部品） Employee range selection</h1>
 					<div class="table">
-					<div class="cell">
+					<div class="cell" style="width: 280px;">
 						<h2>Common properties:</h2>
 						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Show EmployeeList (検索タイプ)</div><br/>
 						<span>systemType (システム区分):</span>
@@ -57,7 +57,7 @@
 						<div data-bind="ntsCheckBox:{checked: showPeriod}">Show Period (対象期間利用)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: periodFormatYM}">Show period format: YM(対象期間精度)</div><br/>
 					</div>
-					<div class="cell">
+					<div class="cell" style="width: 280px;">
 						<h2>Required param properties:</h2>
 						basedate:<div tabindex="3"
 									data-bind="ntsDatePicker: {
@@ -76,14 +76,14 @@
 						<div data-bind="ntsCheckBox:{checked: closed}">Close (休業区分)</div>
 						<div data-bind="ntsCheckBox:{checked: retirement}">Retirement (退職区分)</div>
 					</div>
-					<div class="cell">
+					<div class="cell" style="width: 280px;">
 						<h2>Quick search properties:</h2>
 						<div data-bind="ntsCheckBox:{checked: isAllReferableEmployee}">Show AllReferableEmployee (参照可能な社員すべて)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: isOnlyMe}">Show Only me (自分だけ)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: isEmployeeOfWorkplace}">Show Employee of workplace (同じ職場の社員)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show Employee of workplace follow (同じ職場とその配下の社員)</div><br/>
 					</div>
-					<div class="cell">
+					<div class="cell" style="width: 280px;">
 						<h2>Advanced search properties:</h2>
 						<div data-bind="ntsCheckBox:{checked: showEmployment}">Show Employment (雇用条件)</div><br/>
 						<div data-bind="ntsCheckBox:{checked: showWorkplace}">Show workplace (職場条件)</div><br/>
