--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/f/index.xhtml
@@ -33,7 +33,8 @@
 			<div id="company-tab" role="tabpanel">
 				<div class="sidebar-content-header">
 					<span class="title">#{i18n.getText('Com_Company')}</span>
-					<button tabindex="2" data-bind="click: gotoParent">#{i18n.getText('KMF001_27')}</button>
+<!-- 					<button tabindex="2" data-bind="click: gotoParent">#{i18n.getText('KMF001_27')}</button> -->
+					<a class="goback" data-bind="ntsLinkButton: { jump: '/view/kmf/001/a/index.xhtml' }"  tabindex="2">#{i18n.getText('KMF001_27')}</a>
 					<button tabindex="3" data-bind="click: saveData"
 						class="proceed register-button">#{i18n.getText('KMF001_28')}</button>
 					<!-- <div class="link_label">
@@ -229,7 +230,8 @@
 			<div id="employment-tab" role="tabpanel">
 				<div class="sidebar-content-header">
 					<span class="title">#{i18n.getText('Com_Employment')}</span>
-					<button data-bind="click: gotoParent">#{i18n.getText('KMF001_27')}</button>
+<!-- 					<button data-bind="click: gotoParent">#{i18n.getText('KMF001_27')}</button> -->
+					<a class="goback" data-bind="ntsLinkButton: { jump: '/view/kmf/001/a/index.xhtml' }">#{i18n.getText('KMF001_27')}</a>
 					<button
 						data-bind="click: saveEmployment,enable: !isEmptyEmployment()"
 						class="proceed register-button">#{i18n.getText('KMF001_28')}</button>
