--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/h/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/h/index.xhtml
@@ -29,8 +29,8 @@
 			<div id="tabpanel-1" role="tabpanel">
 				<div class="sidebar-content-header">
 					<span class="title">#{i18n.getText('Com_Company')}</span>
-					<button tabindex="2" data-bind="click: back">#{i18n.getText('KMF001_27')}</button>
-
+<!-- 					<button tabindex="2" data-bind="click: back">#{i18n.getText('KMF001_27')}</button> -->
+					<a class="goback" data-bind="ntsLinkButton: { jump: '/view/kmf/001/a/index.xhtml' }" tabindex="2">#{i18n.getText('KMF001_27')}</a>
 					<button tabindex="3" class="proceed"
 						data-bind="click: saveComSetting">
 						#{i18n.getText('KMF001_28')}</button>
@@ -112,9 +112,9 @@
 			<div id="tabpanel-2" role="tabpanel">
 				<div class="sidebar-content-header">
 					<span class="title">#{i18n.getText('Com_Employment')}</span>
-					<button data-bind="click: back">
-						#{i18n.getText('KMF001_27')}</button>
-
+<!-- 					<button data-bind="click: back"> -->
+<!-- 						#{i18n.getText('KMF001_27')}</button> -->
+					<a class="goback" data-bind="ntsLinkButton: { jump: '/view/kmf/001/a/index.xhtml' }">#{i18n.getText('KMF001_27')}</a>
 					<button class="proceed"
 						data-bind="click: saveEmpSetting , enable: saveDisable">
 						#{i18n.getText('KMF001_28')}</button>
