--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/l/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/l/index.xhtml
@@ -22,7 +22,8 @@
 		<!-- PAGE CONTENT -->
 		<ui:define name="content">
 			<div id="functions-area" class="fix-on-top">
-				<button data-bind="click: backSetupVacation" tabindex="1">#{i18n.getText('KMF001_27')}</button>
+<!-- 				<button data-bind="click: backSetupVacation" tabindex="1">#{i18n.getText('KMF001_27')}</button> -->
+				<a class="goback" data-bind="ntsLinkButton: { jump: '/view/kmf/001/a/index.xhtml' }" tabindex="1">#{i18n.getText('KMF001_27')}</a>
 				<button class="proceed" data-bind="click: save,enable: $root.errors.isEmpty" tabindex="2">#{i18n.getText('KMF001_28')}</button>
 				<!-- <label class="pull-right" style="margin-right: 20px;" tabindex="3">#{i18n.getText('KMF001_29')}</label> -->
 			</div>
