--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -204,6 +204,25 @@
 										</div>
 									</div>
 								</com:ko>
+								<com:ko tag="if" bind="showWorkplace">
+									<div tabindex="21" class="accordion" id="WorkplaceList"
+										data-bind="ntsAccordion: {enable: true}">
+										<h3>
+											<label>#{i18n.getText('CCG001_8', ["Com_Workplace"])}</label>
+										</h3>
+										<div class="contentkcpWorkplace">
+											<div tabindex="22" id="workplaceList"></div>
+											<button tabindex="23" id="btnDetailWorkplace"
+												data-bind="click: detailWorkplace">#{i18n.getText('CCG001_55')}</button>
+											<com:ko tag="ifnot" bind="isExpanded">
+												<button tabindex="24" data-bind="click: expand">Xo ra</button>
+											</com:ko>
+											<com:ko tag="if" bind="isExpanded">
+												<button tabindex="24" data-bind="click: collapse">Dong vao</button>
+											</com:ko>
+										</div>
+									</div>
+								</com:ko>
 								<com:ko tag="if" bind="showClassification">
 									<div tabindex="19" class="accordion" id="ClassificationList"
 										data-bind="ntsAccordion: {enable: true}">
@@ -223,19 +242,6 @@
 										</h3>
 										<div class="contentkcp">
 											<div tabindex="20" id="jobtitleList"></div>
-										</div>
-									</div>
-								</com:ko>
-								<com:ko tag="if" bind="showWorkplace">
-									<div tabindex="21" class="accordion" id="WorkplaceList"
-										data-bind="ntsAccordion: {enable: true}">
-										<h3>
-											<label>#{i18n.getText('CCG001_8', ["Com_Workplace"])}</label>
-										</h3>
-										<div class="contentkcpWorkplace">
-											<div tabindex="22" id="workplaceList"></div>
-											<button tabindex="23" id="btnDetailWorkplace"
-												data-bind="click: detailWorkplace">#{i18n.getText('CCG001_55')}</button>
 										</div>
 									</div>
 								</com:ko>
