--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/b/index.xhtml
@@ -51,8 +51,7 @@
 											value: selectedPartID,
 											primaryKey: 'topPagePartID',
 											columns: listPartColumn,
-											multiple: false,
-											showNumbering: true}"></table>
+											multiple: false}"></table>
 									</div>
 								</div>
 								<div class="col-2 pull-left">
