fix bug [KMF002_B screen] Hiển thị sai B4_3 label name
NUK-1303

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
@@ -9,9 +9,9 @@
 	<ui:composition template="../../../../master/sidebar.xhtml">
 		<ui:define name="sidebar-head">
 			<com:ValidatorScript>
-				nts.uk.ctx.bs.employee.dom.holidaysetting.configuration.WeekNumberOfDay
-				nts.uk.ctx.bs.employee.dom.holidaysetting.configuration.FourWeekDay
-				nts.uk.ctx.bs.employee.dom.holidaysetting.common.MonthlyNumberOfDays
+				nts.uk.ctx.at.shared.dom.holidaymanagement.publicholiday.configuration.WeekNumberOfDay
+				nts.uk.ctx.at.shared.dom.holidaymanagement.publicholiday.configuration.FourWeekDay
+				nts.uk.ctx.at.shared.dom.holidaymanagement.publicholiday.common.MonthlyNumberOfDays
 			</com:ValidatorScript>
 			
 			<com:scriptfile set="IGNITE" />
