--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -181,6 +181,24 @@
 	background-size: 25px 25px;
 	cursor: pointer;
 }
+.icon-28-expand {
+	background: url(icon/28.png);
+	width: 22px;
+	height: 22px;
+	background-size: 22px 22px;
+}
+.icon-29-collapse {
+	background: url(icon/29.png);
+	width: 22px;
+	height: 22px;
+	background-size: 22px 22px;
+}
+.icon-47-white-check-mark {
+	background: url(icon/47.png);
+	width: 30px;
+	height: 30px;
+	background-size: 30px 30px;
+}
 
 .ccg-lbl-vertical {
 	width: 40px;
