[CCG001] fix bug button expand KCP004

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -215,12 +215,12 @@
 											<button tabindex="23" id="btnDetailWorkplace"
 												data-bind="click: detailWorkplace">#{i18n.getText('CCG001_55')}</button>
 											<com:ko tag="ifnot" bind="isExpanded">
-												<button tabindex="24" data-bind="click: expand">
+												<button style="margin-left: 130px" tabindex="24" data-bind="click: expand">
 													<i class="icon icon-28-expand"></i>#{i18n.getText('CCG001_56')}
 												</button>
 											</com:ko>
 											<com:ko tag="if" bind="isExpanded">
-												<button tabindex="24" data-bind="click: collapse">
+												<button style="margin-left: 160px" tabindex="24" data-bind="click: collapse">
 													<i class="icon icon-29-collapse"></i>#{i18n.getText('CCG001_62')}
 												</button>
 											</com:ko>
