--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -186,12 +186,14 @@
 	width: 22px;
 	height: 22px;
 	background-size: 22px 22px;
+	margin-right: 5px;
 }
 .icon-29-collapse {
 	background: url(icon/29.png);
 	width: 22px;
 	height: 22px;
 	background-size: 22px 22px;
+	margin-right: 5px;
 }
 .icon-47-white-check-mark {
 	background: url(icon/47.png);
