Fix bug #88098: fix css Cmm001

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
@@ -86,7 +86,7 @@
 				<div class="fixed-flex-layout-right"
 					data-bind="with: currentCompany">
 					<div class="line-height flex">
-						<div style="width: 176px;">
+						<div>
 							<!-- A3_1 -->
 							<div id="LBLCompanyCode"
 								data-bind="ntsFormLabel: { required: true, constraint: 'CompanyCode'}">#{i18n.getText('CMM001_7')}</div>
@@ -143,7 +143,7 @@
 										<div style="margin-top: 5px">
 											<!-- A3_8 -->
 											<input id="companyNameKana" tabindex="12" class="save-error"
-												data-bind="ntsTextEditor: {value:comNameKana, constraint: 'KNName', required: true, name: '#[CMM001_13]'}" />
+												data-bind="ntsTextEditor: {value: comNameKana, constraint: 'KNName', required: true, name: '#[CMM001_13]'}" />
 										</div>
 									</th>
 								</tr>
@@ -185,7 +185,7 @@
 										<tbody>
 											<!-- 1 -->
 											<tr style="margin-top: 10px;">
-												<th colspan="1" class="th-col1" style="width: 150px">
+												<th colspan="1" class="th-col3" style="width: 150px">
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false}"
 														style="margin-top: 5px;">
@@ -204,7 +204,7 @@
 											</tr>
 											<!--  2  -->
 											<tr style="margin-top: 10px;">
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false, constraint: 'RepName'}">
 														<!-- B1_3 -->
@@ -223,7 +223,7 @@
 											<!-- 3  -->
 
 											<tr style="margin-top: 20px;">
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false, constraint: 'RepJob'}">
 														<!-- B1_5 -->
@@ -250,7 +250,7 @@
 										<tbody>
 											<!-- 1 -->
 											<tr style="margin-top: 5px;">
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false}">
 														<!-- C1_1 -->
@@ -275,7 +275,7 @@
 												</th>
 											</tr>
 											<tr style="margin-top: 5px;">
-												<th colspan="2" class="th-col1">
+												<th colspan="2" class="th-col3">
 													<!-- C1_4 -->
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false, constraint: ['Add_1', 'Add_2']}">
@@ -285,7 +285,7 @@
 											<!-- 4 -->
 											<tr style="margin-top: 5px;">
 												<!-- C1_5 -->
-												<th colspan="1" class="th-col1"><div
+												<th colspan="1" class="th-col3"><div
 														class="left20 border_none"
 														data-bind="ntsFormLabel:{required: false}">
 														<label id="LBLAddress1">#{i18n.getText('CMM001_25')}</label>
@@ -307,7 +307,7 @@
 											<!-- 5 -->
 											<tr style="margin-top: 5px;">
 												<!-- C1_7 -->
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<div class="left20 border_none"
 														data-bind="ntsFormLabel:{required: false}">
 														<label id="LBLAddress2">#{i18n.getText('CMM001_26')}</label>
@@ -325,7 +325,7 @@
 											</tr>
 											<!-- 6 -->
 											<tr style="margin-top: 5px;">
-												<th colspan="2" class="th-col1">
+												<th colspan="2" class="th-col3">
 													<!-- C1_9 -->
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false, constraint: ['Add_Kana_1', 'Add_Kana_2']}">
@@ -335,7 +335,7 @@
 											<!-- 7 -->
 											<tr style="margin-top: 5px;">
 												<!-- C1_10 -->
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<div class="left20 border_none"
 														data-bind="ntsFormLabel:{required: false}">
 														<label id="LBLAddressKana1">#{i18n.getText('CMM001_25')}</label>
@@ -354,7 +354,7 @@
 											<!-- 8 -->
 											<tr style="margin-top: 5px;">
 												<!-- C1_12 -->
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<div class="left20 border_none"
 														data-bind="ntsFormLabel:{required: true}">
 														<label id="LBLAddressKana2">#{i18n.getText('CMM001_26')}</label>
@@ -370,7 +370,7 @@
 											</tr>
 											<!-- 9 -->
 											<tr style="margin-top: 5px;">
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<!-- C1_14 -->
 													<div class="form-label"
 														data-bind="ntsFormLabel:{required: false}">
@@ -388,7 +388,7 @@
 											</tr>
 											<!-- 10 -->
 											<tr style="margin-top: 5px;">
-												<th colspan="1" class="th-col1">
+												<th colspan="1" class="th-col3">
 													<!-- " -->
 													<div id="fax" data-bind="ntsFormLabel:{required: false}">
 														<!-- C1_16 -->
@@ -412,7 +412,7 @@
 											<tbody>
 												<!-- 1 -->
 												<tr style="margin-top: 5px;">
-													<th colspan="1" class="th-col1">
+													<th colspan="1" class="th-col3">
 														<!-- D1_1 -->
 														<div class="form-label"
 															data-bind="ntsFormLabel:{required: true}"
@@ -437,7 +437,7 @@
 												</tr>
 												<!-- 2 -->
 												<tr style="margin-top: 5px;">
-													<th colspan="1" class="th-col1">
+													<th colspan="1" class="th-col3">
 														<div class="form-label"
 															data-bind="ntsFormLabel:{required: true}">
 															<!-- D1_3 -->
@@ -461,7 +461,7 @@
 												<!-- 3 -->
 												<!-- D1_5 -->
 												<tr style="margin-top: 5px;">
-													<th colspan="1" class="th-col1">
+													<th colspan="1" class="th-col3">
 														<div class="form-label"
 															data-bind="ntsFormLabel:{required: true}">
 															<label id="D_LBL_003">#{i18n.getText('CMM001_34')}</label>
@@ -482,7 +482,7 @@
 													</th>
 												</tr>
 												<tr style="margin-top: 5px;">
-													<th colspan="1" class="th-col1">
+													<th colspan="1" class="th-col3">
 														<div class="form-label"
 															data-bind="ntsFormLabel:{required: true}">
 															<!-- D1_7 -->
@@ -507,7 +507,7 @@
 													</th>
 												</tr>
 												<tr style="margin-top: 5px;">
-													<th colspan="1" class="th-col1">
+													<th colspan="1" class="th-col3">
 														<div data-bind="ntsFormLabel:{required: true}">
 															<!-- D1_10 -->
 															<label id="Ds_LBL_005">#{i18n.getText('CMM001_38')}</label>
