update cps 002 style

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/g/cps002.g.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/002/g/cps002.g.style.css
@@ -21,8 +21,7 @@ input.txtEmpCodeFirstChar {
 	margin: 5px 0px;
 }
 
-#empInitGroup .ntsRadioBox:not (:first-child ), #initCardNoGroup .ntsRadioBox:not
-	(:first-child ) {
+#empInitGroup .ntsRadioBox:not(:first-child), #initCardNoGroup .ntsRadioBox:not(:first-child){
 	width: 100%;
 	margin-top: 5px;
 }
