--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/b/ksc001.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/b/ksc001.b.main.css
@@ -69,7 +69,7 @@
 
 .buttonNext {
 	float: right;
-	margin-top: 25px;
+	margin-top: 18px;
 	margin-right: 45px;
 }
 
@@ -156,11 +156,11 @@ button.nts-switch-button {
 }
 
 .nts-wizard.vertical>.steps {
-	height: 739px;
+	height: 600px;
 }
 
 .nts-wizard.vertical>.content {
-	height: 739px;
+	height: 600px;
 	margin: 0 0 0 0;
 	background: none;
 }
@@ -204,4 +204,13 @@ button.nts-switch-button {
 
 .rangeDatePicker {
 	padding-top: 4px;
+}
+#employeeSearch {
+	height: 460px;
+}
+.ccg_tab_content_1 {
+    height: 460px !important;
+}
+.ccg_tab_content_2 {
+    height: 460px !important;
 }
