--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/kmf002.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/kmf002.a.main.css
@@ -54,6 +54,7 @@
 	margin-left: 55px;
 	margin-top: 8px;
 	display: inline-block;
+	font-size: 2rem;
 }
 
 .sidebar-content-header > button:nth-child(2) {
