--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
@@ -60,7 +60,7 @@
 			<div id="functions-area">
 				<div>
 					<!-- B1_1 -->
-					<a class="goback" data-bind="ntsLinkButton: { jump: '../test/index.xhtml' }">#{i18n.getText('KAF000_14')}</a>
+					<a class="goback" data-bind="ntsLinkButton: { jump: '../../../cmm/045/a/index.xhtml' }">#{i18n.getText('KAF000_14')}</a>
 					<!-- B1_2 -->
 					<button class="kaf000-function-btn" data-bind="click: btnBefore, enable: enableBefore" ><i class="icon icon-button-arrow-left"></i></button>
 					<!-- B1_3 -->
