--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -122,7 +122,7 @@
 			<com:ko tag="if" bind="isAdvancedSearchTab">
 				<div tabindex="-1" class="tab-content-2 height-maximum">
 						<div id="ccg001-tab-content-2" class="height-maximum">
-							<div class="pull-left height-maximum" style="padding-right: 15px; overflow: overlay;">
+							<div class="pull-left height-maximum" style="padding-right: 20px; overflow: overlay;">
 								<div>
 									<label>#{i18n.getText('CCG001_24')}</label>
 								</div>
@@ -220,7 +220,7 @@
 												</button>
 											</com:ko>
 											<com:ko tag="if" bind="isExpanded">
-												<button style="margin-left: 160px" tabindex="24" data-bind="click: collapse">
+												<button id="ccg-001-btn-collapse" tabindex="24" data-bind="click: collapse">
 													<i class="icon icon-29-collapse"></i>#{i18n.getText('CCG001_62')}
 												</button>
 											</com:ko>
